Update R2Pipe class.
Use process builder to create and start a process and redirect stderr
to stdout.